adding index.js file with set interval to move seconds hand

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -15,10 +15,6 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
-
-  <script>
-
-
-  </script>
 </body>
+<script src="index.js"></script>
 </html>
