--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -3,17 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML5 Canvas</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
-<script>
+<script src="index.js">
 </script>
-
-<style>
-  html, body {
-    margin:0;
-  }
-</style>
-
 </body>
 </html>
